Fixed ipad col overflow

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -173,7 +173,7 @@ h3 {
   @include clearfix();
 
   text-align: center;
-  margin-bottom: 24px;
+  margin-bottom: 20px;
 }
 
 .left-side, .right-side {
@@ -296,7 +296,7 @@ h3 {
   }
 
   ins {
-    margin-right: 8px;
+    margin-right: 4px;
     width: 21px;
     height: 21px;
     border: 3px solid #7e8183;
